--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -4,11 +4,13 @@
       <p class="py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium rounded-lg inline-block" id="notice"><%= notice %></p>
     <% end %>
 
-    <%= link_to 'Edit this post', edit_post_path(@post), class: "mt-2 rounded-lg py-3 px-5 bg-blue-600 hover:bg-blue-700 text-white inline-block font-medium" %>
-    <div class="inline-block ml-2">
-      <%= button_to 'Destroy this post', post_path(@post), method: :delete, class: "mt-2 rounded-lg py-3 px-5 bg-red-600 hover:bg-red-700 text-white font-medium" %>
-    </div>
-    <%= link_to 'Back to posts', posts_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-200 inline-block font-medium" %>
+    <% if user_signed_in? %>
+      <%= link_to 'Edit this post', edit_post_path(@post), class: "mt-2 rounded-lg py-3 px-5 bg-blue-600 hover:bg-blue-700 text-white inline-block font-medium" %>
+      <div class="inline-block ml-2">
+        <%= button_to 'Destroy this post', post_path(@post), method: :delete, class: "mt-2 rounded-lg py-3 px-5 bg-red-600 hover:bg-red-700 text-white font-medium" %>
+      </div>
+      <%= link_to 'Back to posts', posts_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-200 inline-block font-medium" %>
+    <% end %>
 
     <%= render @post %>
 
