--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,10 +3,12 @@
     <p class="py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium rounded-lg inline-block" id="notice"><%= notice %></p>
   <% end %>
 
-  <div class="flex justify-between items-center">
-    <%= link_to 'New post', new_post_path, class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium" %>
-  </div>
-
+  <% if user_signed_in? %>
+    <div class="flex justify-between items-center">
+      <%= link_to 'New post', new_post_path, class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium" %>
+    </div>
+  <% end %>
+  
   <div id="posts" class="min-w-full">
     <div class="grid grid-cols-1 gap-4">
       <% @posts.each do |post| %>
